--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- ListView that is a target for the ArrayList to be displayed - connected to every activity-->
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
