added comment above AudioManager

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:id="@+id/numbers"
             style="@style/CategoryStyle"
             android:background="?android:attr/selectableItemBackground"
-            android:text="@string/category_numbers" />
+            android:text="@string/category_numbers"
+            />
     </FrameLayout>
 
     <!-- Family category -->
