final version of the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
-        style="@style/CategoryStyle"/>
+        app:tabGravity="fill"
+        style="@style/CategoryTab"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
